[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.25.0"
ndarray = "0.15.6"
once_cell = "1.18.0"
rayon = "1.8.0"
reqwest = { version = "0.11.22", features = ["cookie_crate", "cookies"] }
tokio = { version = "1.34.0", features = ["full"] }
